# Tracker4

./: .ROADMAP.md.swp  .TODO.md.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
json_test/: CMakeLists.txt  main.cpp  score_data.json
lexer_test/: CMakeLists.txt  chrono.h  code_editor_parser.h  main.cpp  test.c  test.cpp  test.lua
src/: main.cpp
src/animations/: cell_animator.h  fps_model.h  generic_animation.cpp  generic_animation.h
src/audio/: csound_singleton.cpp  csound_singleton.h
src/controllers/: cell_selection_controller.cpp  cell_selection_controller.h
src/dialogs/: elements_dialog_base.cpp  elements_dialog_base.h  options_dialog.cpp  options_dialog.h
src/lib/lexertk/: lexertk.hpp
src/maths/: cubic_spline.h
src/models/: curve.h  curve_point.h  sniper_track_event.h  track_event.h
src/tracker/: config_data.cpp  config_data.h  filesystem.h  jtracker.cpp  jtracker.h  jtracker_globals.cpp  jtracker_globals.h  jtracker_theme.cpp  jtracker_theme.h  track_base.h  track_set_utilities.cpp  track_set_utilities.h  tracker_actions.cpp  tracker_actions.h
src/utilities/: maths_utilities.h  paint_utilities.h  string_utilities.h
src/widgets/: active_cell_composer.h  active_dynamic_list.h  active_dynamic_list_impl.h  common_widgets.h  curve_editor.cpp  curve_editor.h  custom_container.h  custom_labels.h  custom_radio.cpp  custom_radio.h  dynamic_size_cell_composer.h  expandable.cpp  expandable.h  sniper_event_editor.cpp  sniper_event_editor.h  sniper_track_box.cpp  sniper_track_box.h  sniper_track_content.cpp  sniper_track_content.h  spinbox.cpp  spinbox.h  synced_scrollers.h  track_base.h  track_cell.cpp  track_cell.h  track_content.cpp  track_content.h  track_line.cpp  track_line.h
src/widgets/tracker/: curve_editor_view.cpp  curve_editor_view.h  gen_view.cpp  gen_view.h  jtracker_global_widgets.cpp  jtracker_global_widgets.h  sniper_track.h  tab_view.cpp  tab_view.h  tempo_track.cpp  tempo_track.h  tempo_track_line.cpp  tempo_track_line.h  track.h  track_view.cpp  track_view.h  tracker_menus.h  tracker_track.cpp  tracker_track.h
tests/: README.md
